--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
         </div>
 
         <div class="input-area">
-            <button class="talk-btn"><i class="fas fa-microphone-alt"></i></button>
-            <p class="status-text">Click microphone to speak</p>
+            <div class="input-wrapper">
+                <input type="text" id="type-box" placeholder="Type your command here...">
+                <button id="send-btn"><i class="fas fa-paper-plane"></i></button>
+            </div>
+            <div class="voice-controls">
+                <button class="talk-btn"><i class="fas fa-microphone-alt"></i></button>
+                <p class="status-text">Click mic to speak</p>
+            </div>
         </div>
     </section>
 
